--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 FLASK_APP=app.py
+SECRET_KEY="secret key"
 DATABASE_URI=postgresql://roryjbjz:YI_bkS5p6JLZTfTykM5uc-xMSD3QTgxO@bubble.db.elephantsql.com/roryjbjz
 FLASK_DEBUG=1
