--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Login==0.6.3
 flask-marshmallow==0.15.0
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 greenlet==3.0.1
 gunicorn==21.2.0
 idna==3.6
@@ -21,7 +22,7 @@ marshmallow==3.20.1
 packaging==23.2
 psycopg2-binary==2.9.9
 python-dateutil==2.8.2
-python-dotenv
+python-dotenv==1.0.0
 six==1.16.0
 SQLAlchemy==2.0.23
 typing_extensions==4.8.0
