--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-FLASK_APP=app.py
+FLASK_APP=app
 SECRET_KEY="secret key"
-DATABASE_URI=postgresql://roryjbjz:YI_bkS5p6JLZTfTykM5uc-xMSD3QTgxO@bubble.db.elephantsql.com/roryjbjz
+FLASK_RUN = development
+DATABASE_URI=postgresql://hmhtssyf:iH9dmnJEkWkBkw7tTGlg0kezKPY0w--S@mahmud.db.elephantsql.com/hmhtssyf
 FLASK_DEBUG=1
